--- a/style.css
+++ b/style.css
@@ -1,83 +1,113 @@
 html,body{
-    margin: 0;
-    padding: 0;
-    width: 100%;
+  margin: 0;
+  padding: 0;
+  width: 100%;
 }
 body {
-    font-family: sans-serif;
+  font-family: sans-serif;
+  background-color: rgb(215, 213, 213);
 }
 header{
-    width: 100%;
-    height: 100vh;
-    background:url(image/overwatch-all-heroes-united-hd-dpacmg5qk3abi7qn.jpg) no-repeat 50% 50%;
-    background-size: cover;
-    background-attachment: fixed;
+  width: 100%;
+  height: 100vh;
+  background:url(image/overwatch-all-heroes-united-hd-dpacmg5qk3abi7qn.jpg) no-repeat 50% 50%;
+  background-size: cover;
+  background-attachment: fixed;
 }
 .OWlogo{
-    position:fixed;
-    height:auto;
-    left:10px;
-    height: 70px;
-    vertical-align:middle;
+  position:fixed;
+  height:auto;
+  left:10px;
+  height: 70px;
+  vertical-align:middle;
 }
 nav{
-    position: fixed;
-    width: 100%;
+  position: fixed;
+  width: 100%;
 }
 nav ul{
-    list-style: none;
-    background: white;
-    overflow: hidden;
-    color:white;
-    padding: 0;
-    text-align: center;
-    margin: 0;
-    transition:ls;
-}
-nav.black ul{
-
-    background:#000;
+  list-style: none;
+  background: white;
+  overflow: hidden;
+  color:white;
+  padding: 0;
+  text-align: center ;
+  margin: 0 ;
+  transition:ls;
 }
 nav ul li{
-    display: inline-block;
-    padding: 20px;
+  display: inline-block;
+  padding: 25px;
 }
 nav ul li a {
-    text-decoration: none;
-    color: black;
-    font-family: sans-serif;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+  text-decoration: none;
+  color: black;
+  font-family: sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
 .container {
-    display: flex; 
-  }
-  
-  .image {
-    flex: 1; 
-  }
-  
-  .image img {
-    width: 100%;
-  }
-  
-  .text {
-    flex: 1; 
-    padding: 0 20px; 
-    font-size: 16px;
-  }
-  footer {
-    background-color: #333; 
-    color: #fff; 
-    padding: 20px 0; 
-    text-align: center; 
-  }
-  
-  .container {
-    max-width: 1200px; 
-    margin: 0 auto; 
-  }
-  
-  .container p {
-    margin: 0; 
-  }
+  display: flex; 
+}
+
+.image {
+  flex: 1; 
+}
+
+.image img {
+  width: 100%;
+}
+
+.text {
+  flex: 1; 
+  padding: 0 20px; 
+  font-size: 16px;
+}
+footer {
+  margin: 0;
+  padding: 30px 0;
+  box-sizing: border-box;
+  background-color: white;
+
+}
+footer ul{
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  font-family: sans-serif;
+  font-size: 18px;
+  line-height: 1.6;
+  margin-bottom: 0;
+  text-align: center;
+  text-decoration: none;
+}
+
+footer ul li{
+  display: inline-block;
+  padding: 0px 15px;
+}
+footer p{
+  margin-top: 0px;
+  margin-bottom: 1px;
+  text-align: center;
+  font-size: 13px;
+  color: rgb(127, 121, 121);
+}
+footer ul li a:hover {
+  opacity: 1;
+}
+/* footer {
+  background-color: #333; 
+  color: #fff; 
+  padding: 20px 0; 
+  text-align: center; 
+}
+
+.container {
+  max-width: 1200px; 
+  margin: 0 auto; 
+}
+
+.container p {
+  margin: 0; 
+}*/
